syntax = "proto3";

package tcp_io_device;

message TCPMessage {
    enum Type {
        SETUP = 0;
        DATA = 1;
        START = 2;
        STOP = 3;
        RECONNECT = 4;
    }
    Type messageType = 1;
    oneof message {
        SetupMessage setupMessage = 2;
        DataMessage dataMessage = 3;
        StartMessage startMessage = 4;
        StopMessage stopMessage = 5;
    }
    uint64 timestamp = 6;
}

message StartMessage{
    // Reconnectiontype defines the reconnection behavior of the external environmment.
    // RE_INIT: Restarts the external environment and it sends out a new setup message.
    // RE_SETUP: The external environment sends out a new setup message but remains in the state it is currently in.
    // NONE: No further information is passed between AERA and the external environment.
    enum ReconnectionType {
        RE_INIT = 0;
        RE_SETUP = 1;
        NONE = 2;
    }
    bool diagnosticMode = 1;
    ReconnectionType reconnectionType = 2;
}

message StopMessage{

}

message SetupMessage {
    map<string, int32> entities = 1;
    map<string, int32> objects = 2;
    map<string, int32> commands = 3;
    repeated CommandDescription commandDescriptions = 4;
}

message CommandDescription {
    VariableDescription description = 1;
    string name = 2;
}

message DataMessage {
    repeated ProtoVariable variables = 1;
    uint64 timeSpan = 2;
}

message VariableDescription {

    enum DataType {
        DOUBLE = 0;
        // FLOAT = 1;
        // INT32 = 2;
        INT64 = 3;
        // UINT32 = 4;
        // UINT64 = 5;
        // Reserved if ever needed
        // SINT32 = 6;
        // SINT64 = 7;
        // FIXED32 = 8;
        // FIXED64 = 9;
        // SFIXED32 = 10;
        // SFIXED64 = 11;
        BOOL = 12;
        STRING = 13;
        BYTES = 14;
        COMMUNICATION_ID = 15; // Handled the same as a INT64, but provides information that the sent int is an ID (e.g. to send "holding s").
    }

    int32 entityID = 1;
    int32 ID = 2;
    DataType dataType = 3;
    repeated uint64 dimensions = 4;
	string opcode_string_handle = 5;
}

message ProtoVariable
{
    VariableDescription metaData = 1;
    bytes data = 2;
}